# CMakeList.txt : CMake project for bienutil_test, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("bienutil_test")

# Add source to this project's executable.
add_executable (bienutil_test "bienutil_test.cpp" "bienutil_test.h")

# TODO: Add tests and install targets if needed.
